--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,8 +5,8 @@ html
 
 		//- import JS libraries
 		script(type='text/javascript', src='/javascripts/libs/jquery-1.10.2.min.js')
-		script(type='text/javascript', src='/javascripts/libs/masonry.pkgd.min.js')
-		script(type='text/javascript', src='/javascripts/libs/blur.js')
+		//-script(type='text/javascript', src='/javascripts/libs/masonry.pkgd.min.js')
+		//-script(type='text/javascript', src='/javascripts/libs/blur.js')
 
 		//- more scripts in children pages
 		block scripts
@@ -18,6 +18,7 @@ html
 
 		//- meta
 		meta(name="apple-mobile-web-app-capable", content="yes")
+		meta(name="viewport", content="user-scalable=false;")
 
 	body
 		header
