--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,7 +18,7 @@ html
 
 		//- meta
 		meta(name="apple-mobile-web-app-capable", content="yes")
-		meta(name="viewport", content="user-scalable=false;")
+		meta(name="viewport", content="user-scalable=false")
 
 	body
 		header
