--- a/views/album2.jade
+++ b/views/album2.jade
@@ -31,7 +31,15 @@ block content
   div.loadmore
   div.dialog.hidden
     div.device
-      a.arrow-left(href="#")
-      a.arrow-right(href="#")
       div.swiper-container
         div.swiper-wrapper
+          div.swiper-slide
+            img
+          div.swiper-slide
+            img
+          div.swiper-slide
+            img
+          div.swiper-slide
+            img
+          div.swiper-slide
+            img
