Removed download button

--- a/views/album.jade
+++ b/views/album.jade
@@ -14,8 +14,8 @@ block content
     //- action menu
     div.action_menu.fade2
       ul
-        li 
-          a(id="action_download", href="/events/#{event._id}/download") Download
+        //- li 
+          //- a(id="action_download", href="/events/#{event._id}/download") Download
         li 
           a(id="action_slideshow", href="#slideshow") Slideshow
 
