Added reload button to logo

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,7 +23,7 @@ html
 	body
 		header
 			h1.logo
-				a(href="#") Capulati
+				a(href="javascript:window.location.reload();") Capulati
 					img(src="/images/logo4.png")
 		div#main_content			
 			block content
