Updated slideshow background

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -699,7 +699,7 @@ form.event ul {
 }
 .media_popup {
   color: #777;
-  background: #FFE7D7;
+  background: #FFE48C;
   height: 612px;
   width: 900px;
   position: absolute;
